--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <div class="container">
+    <div class="header">
+      <h1>Random Quotes</h1>
+      <button id="loadQuote">Show another quote</button>
+    </div>
+    
     <div id="quote-box">
       <p class="quote">You can do anything but not everything</p>
       <p class="source">David Allen
@@ -16,7 +21,7 @@
         <span class="year">2009</span><br>Philosopher
       </p>
     </div>
-    <button id="loadQuote">Show another quote</button>
+   
   </div>
   <script src="js/script.js"></script>
 </body>
